# subpixal

./: .gitignore  CHANGELOG.rst  README.md  README.rst  readthedocs.yml  setup.cfg  setup.py
docs/: .rtd-environment.yml  conf.py  environment.yml  index.rst  rtd-pip-requirements
docs/exts/: numfig.py
docs/source/: align.rst  catalogs.rst  conf.py  cutout.rst  index.rst  resample.rst
docs/subpixal/: blot.rst  catalogs.rst  cc.rst  centroid.rst  cutout.rst  resample.rst  utils.rst
notebooks/example1/: example1.ipynb  gauss_5.0_9x9.conv  sextractor.cfg  sextractor.param
subpixal/: __init__.py  align.py  blot.py  catalogs.py  cc.py  centroid.py  cutout.py  drizzle.py  resample.py  utils.py
